--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           every project.
         </p>
       </span>
+
       <span class="hero_text">
         Web
         <br />
@@ -41,6 +42,7 @@
       <img src="./background.jpg" alt="about background" />
 
       <span class="about_span">Who am I?</span>
+
       <div class="about_content">
         <div class="about_topics">
           <span>About me</span>
@@ -57,7 +59,7 @@
       </div>
 
       <div class="skills">
-        <span>After Effect</span>
+        <span>Figma</span>
         <span>illustrator</span>
         <span>Webflow</span>
         <span>Framer</span>
@@ -69,12 +71,13 @@
       </div>
     </div>
 
-    <div class="project_section">
+    <div class="projects_section">
       <span class="projects_title">Projects</span>
-      <div class="project_container">
+
+      <div class="projects_container">
         <div class="project project1">
           <span>01</span>
-          <img src="1.jpg" />
+          <img class="bg_image" src="1.jpg" />
         </div>
 
         <div class="sub_container">
