--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <span>Duy Thai</span>
         <span>Projects</span>
         <span>
-          Web Developer/
+          UX/UI Designer/
           <br />
           Software Engineer/
         </span>
@@ -21,18 +21,19 @@
 
       <span class="sub_hero_text">
         <p>
-          Welcome to the digital realm, where passion for web development and
-          graphic design converges into captivating online experiences. With a
-          career dedicated to pushing boundaries and setting new standards, I
-          bring a unique blend of technical expertise and creative finesse to
-          every project.
+          Step into the boundless realm of the digital landscape, where the
+          fusion of web development prowess and graphic design ingenuity crafts
+          immersive online journeys. With an unwavering dedication to innovation
+          and a penchant for redefining norms, I seamlessly blend technical
+          acumen with creative flair, infusing each project with a distinctive
+          touch that captivates and inspires.
         </p>
       </span>
 
       <span class="hero_text">
-        Web
+        website
         <br />
-        Enthusiast
+        developer
       </span>
 
       <span class="scroll_btn">(Scroll To Explore)</span>
@@ -49,12 +50,13 @@
           <span>My skills</span>
         </div>
         <span class="about_text">
-          Welcome to the <span class="italic"> digital realm</span>, where
-          passion for web development and graphic design converges into
-          captivating online experiences. With a career dedicated to pushing
-          boundaries and <span class="italic">setting new standards,</span>
-          I bring a unique blend of technical expertise and creative finesse to
-          every project.
+          Driven undergraduate software engineer seeking opportunities to apply
+          my skills and passion for building innovative solutions. Eager to
+          learn and contribute to a collaborative team environment. I'm
+          particularly interested in website building, UX/UI designing, user
+          interface development and scalable software. I believe my strong work
+          ethic and dedication to continuous learning will make me a valuable
+          asset to your team.
         </span>
       </div>
 
