--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="about_section">
-      <img src="./background.jpg" alt="about background" />
+      <img src="./assets/img/background.jpg" alt="about background" />
 
       <span class="about_span">Who am I?</span>
 
