--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="projects_container">
         <div class="project project1">
           <span>01</span>
-          <img class="bg_image" src="1.jpg" />
+          <img class="bg_image" src="assets/img/1.jpg" />
         </div>
 
         <div class="sub_container">
