--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
         <div class="sub_container">
           <div class="project project2">
             <span>02</span>
-            <img src="2.jpg" />
+            <img src="assets/img/2.jpg" />
           </div>
           <div class="project project3">
             <span>03</span>
-            <img src="3.jpg" />
+            <img src="assets/img/3.jpg" />
           </div>
           <div class="project project4">
             <span>04</span>
-            <img src="4.jpg" />
+            <img src="assets/img/4.jpg" />
           </div>
           <div class="project project5">
             <span>05</span>
-            <img src="5.jpg" />
+            <img src="assets/img/5.jpg" />
           </div>
         </div>
       </div>
