--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <div class="home_section">
       <nav>
         <span>Duy Thai</span>
-        <span>Projects</span>
-        <span>
-          UX/UI Designer/
+        <span>Project</span>
+        <Span>
+          UX/UI Designer
           <br />
-          Software Engineer/
-        </span>
+          Software Engineer
+        </Span>
         <span class="nav_contact_link">Contact</span>
       </nav>
 
@@ -24,7 +24,7 @@
           Step into the boundless realm of the digital landscape, where the
           fusion of web development prowess and graphic design ingenuity crafts
           immersive online journeys. With an unwavering dedication to innovation
-          and a penchant for redefining norms, I seamlessly blend technical
+          and a penchant for redefining norms, I seamlesslyblend technical
           acumen with creative flair, infusing each project with a distinctive
           touch that captivates and inspires.
         </p>
@@ -35,29 +35,26 @@
         <br />
         developer
       </span>
-
-      <span class="scroll_btn">(Scroll To Explore)</span>
+      <span class="scroll_btn">(Scroll to Explore)</span>
     </div>
 
     <div class="about_section">
-      <img src="./assets/img/background.jpg" alt="about background" />
-
+      <img src="assets/img/background.jpg" />
       <span class="about_span">Who am I?</span>
-
       <div class="about_content">
         <div class="about_topics">
           <span>About me</span>
-          <span>My skills</span>
+          <span>Skills</span>
         </div>
-        <span class="about_text">
+        <div class="about_text">
           Driven undergraduate software engineer seeking opportunities to apply
-          my skills and passion for building innovative solutions. Eager to
-          learn and contribute to a collaborative team environment. I'm
-          particularly interested in website building, UX/UI designing, user
-          interface development and scalable software. I believe my strong work
-          ethic and dedication to continuous learning will make me a valuable
-          asset to your team.
-        </span>
+          my skills and passion for building innovative solutions. Eager to lean
+          and contribute to a collaborative team environment. I'm particularly
+          interested in website building, UX/UI designing, user interface
+          development and scalable software. I believe my strong work ethic and
+          dedication to continuous learning will make me a valuable asset to
+          your team.
+        </div>
       </div>
 
       <div class="skills">
@@ -68,68 +65,70 @@
         <span>Wordpress</span>
         <span>Gsap</span>
         <span>ReactJS</span>
-        <span>NextJS</span>
         <span>NodeJS</span>
+        <span>NextJS</span>
       </div>
     </div>
 
     <div class="projects_section">
-      <span class="projects_title">Projects</span>
-
-      <div class="projects_container">
-        <div class="project project1">
-          <span>01</span>
-          <img class="bg_image" src="assets/img/1.jpg" />
+        <span class="project_title">My Projects</span>
+        
+        <div class="projects_container">
+            <div class="project project1">
+                <span>01</span>
+                <img src="assets/img/1.jpg" />
+            </div>
+            <div class="sub_container">
+                <div class="project project2">
+                    <span>02</span>
+                    <img src="assets/img/2.jpg" />
+                </div>
+                <div class="project project3">
+                    <span>03</span>
+                    <img src="assets/img/3.jpg" />
+                </div>
+                <div class="project project4">
+                    <span>04</span>
+                    <img src="assets/img/4.jpg" />
+                </div>
+                <div class="project project5">
+                    <span>05</span>
+                    <img src="assets/img/5.jpg" />
+                </div>
+            </div>
         </div>
 
-        <div class="sub_container">
-          <div class="project project2">
-            <span>02</span>
-            <img src="assets/img/2.jpg" />
-          </div>
-          <div class="project project3">
-            <span>03</span>
-            <img src="assets/img/3.jpg" />
-          </div>
-          <div class="project project4">
-            <span>04</span>
-            <img src="assets/img/4.jpg" />
-          </div>
-          <div class="project project5">
-            <span>05</span>
-            <img src="assets/img/5.jpg" />
-          </div>
-        </div>
-      </div>
     </div>
 
     <div class="contact_section">
-      <span>Linked In.</span>
-      <span>Youtube.</span>
-      <span>Instagram.</span>
-      <span>Facebook.</span>
-      <span>Wanna work with me?</span>
+        <span>Linked In.</span>
+        <span>Facebook.</span>
+        <span>Instagram.</span>
+        <span>XXX.</span>
+        <span>Wanna work with me</span>
     </div>
 
+
     <div class="footer">
-      <span class="footer_title"
-        >Duy <br />
-        Thai</span
-      >
-      <span class="footer_contack_link">Wanna work with me?</span>
-      <div class="footer_nav">
-        <span>Home</span>
-        <span>About</span>
-        <span>Projects</span>
-        <span>Contact</span>
-      </div>
-      <div class="footer_nav">
-        <span>Linked In</span>
-        <span>Youtube</span>
-        <span>Instagram</span>
-        <span>Facebook</span>
-      </div>
+        <span class="footer_title">
+            Duy 
+            <br/>
+            Thai
+        </span>
+        <span class="footer_contact_link">Let's work together</span>
+        <div class="footer_nav">
+            <span>Home</span>
+            <span>About</span>
+            <span>Project</span>
+            <span>Contact</span>
+        </div>
+
+        <div class="footer_nav">
+            <span>Linked In.</span>
+            <span>Facebook.</span>
+            <span>Instagram.</span>
+            <span>XXX.</span>
+        </div>
     </div>
   </body>
 </html>
-
